--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -12,7 +12,7 @@
   "tasks": {
     "start": {
       "name": "start",
-      "command": "npm run test",
+      "command": "yarn test",
       "runAtStart": true
     },
     "install": {
