chore: install jest via yarn and remove it from npm deps

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "author": "Ives van Hoorne",
   "license": "MIT",
+  "dependencies": {},
   "devDependencies": {
     "jest": "^29.7.0"
   }
