feat: add and test functions for reference and wrapper types

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "keywords": [],
   "author": "Ives van Hoorne",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "jsdom": "^26.1.0"
+  },
   "devDependencies": {
     "jest": "^29.7.0"
   }
